--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     .center-block {
       position: absolute;
       left: 8vw;
-      top: 12vh;   /* posición vertical del nombre */
+      top: 12vh;
       transform: translateY(30px);
       opacity: 0;
       z-index: 2;
@@ -82,9 +82,7 @@
       color: #f9fafb;
       text-shadow: 0 1px 0 rgba(0,0,0,.7), 0 18px 40px rgba(0,0,0,.9);
     }
-    .name span {
-      display: inline-block;
-    }
+    .name span { display: inline-block; }
 
     .subtitle {
       font-size: .85rem;
@@ -181,28 +179,25 @@
       background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 160 160' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.9'/%3E%3C/svg%3E");
     }
 
-    /* --------- AJUSTES PARA IPAD / VERTICAL --------- */
+    /* AJUSTES PARA IPAD / VERTICAL */
     @media (max-width: 768px) {
       .center-block {
         left: 6vw;
-        top: 10vh; /* un poquito más margen arriba en vertical */
+        top: 10vh;
       }
-
       .name {
         font-size: clamp(2rem, 6vw, 2.6rem);
         letter-spacing: 0.26em;
         flex-direction: column;   /* Andrea / Lértora en dos líneas */
         gap: 0.05em;
       }
-
       .subtitle {
         font-size: 0.8rem;
         letter-spacing: 0.20em;
         margin-bottom: 0.7rem;
       }
-
       .nav-button {
-        width: 177px; /* mantiene el ancho, pero se ve bien igual */
+        width: 177px;
         padding: 0.22rem 0.75rem;
       }
     }
@@ -261,7 +256,7 @@
       loadBG(); loadFG();
     }
 
-    /* ---------- FONDO: ALGAS ANCLADAS POR ABAJO ---------- */
+    /* ---------- FONDO: ALGAS ANCLADAS POR ABAJO Y QUE PASAN ARRIBA ---------- */
     function loadBG(){
       const count=Math.floor(random(10,18));
       let done=0;
@@ -281,8 +276,9 @@
 
     function layoutBG(){
       const vh=innerHeight, vw=innerWidth;
-      const h=vh*1.20;               // más altas
-      const bottomOffset=-vh*0.10;    // base 10% por debajo de la pantalla
+      const h=vh*1.60;              // 160% de la altura de pantalla
+      const bottomOffset=-vh*0.30;   // base 30% por debajo
+
       let x=random(vw*.05, vw*.1);
 
       bgImages.forEach(img=>{
@@ -304,7 +300,7 @@
       tryReveal();
     }
 
-    /* ---------- FRENTE: ALGAS ANCLADAS POR ABAJO ---------- */
+    /* ---------- FRENTE: ALGAS ANCLADAS POR ABAJO Y QUE PASAN ARRIBA ---------- */
     function loadFG(){
       const count=Math.floor(random(7,12));
       let done=0;
@@ -323,8 +319,8 @@
 
     function layoutFG(){
       const vh=innerHeight, vw=innerWidth;
-      const h=vh*1.20;
-      const bottomOffset=-vh*0.10;
+      const h=vh*1.60;
+      const bottomOffset=-vh*0.30;
       const seg=fgImages.length-1 || 1;
       const sw=vw/seg;
 
